--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ChatHub",
+  "name": "chathub",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "keywords": [
     "微信公众平台",
@@ -16,6 +17,10 @@
     "express": "^4.18.2",
     "node-fetch": "^2.6.9",
     "sha1": "^1.1.1",
-    "xml2js": "^0.5.0"
+    "xml2js": "^0.5.0",
+    "openai": "^3.2.1"
+  },
+  "devDependencies": {
+    "readline-sync": "1.4.10"
   }
 }
