--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "Leon Xu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "express": "^4.18.2",
     "node-fetch": "^2.6.9",
+    "openai": "^3.2.1",
     "sha1": "^1.1.1",
-    "xml2js": "^0.5.0",
-    "openai": "^3.2.1"
+    "xml2js": "^0.5.0"
   },
   "devDependencies": {
     "readline-sync": "1.4.10"
