--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.3.6",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "node-fetch": "^2.6.9",
     "openai": "^3.2.1",
     "sha1": "^1.1.1",
